fix: set new header z-index

--- a/assets/source/sass/navigation/_header-flexible.scss
+++ b/assets/source/sass/navigation/_header-flexible.scss
@@ -1,10 +1,10 @@
 .c-header.c-header--flexible {
     &#site-header-flexible-upper {
-        z-index: 8;
+        z-index: 2;
     }
 
     &#site-header-flexible-lower {
-        z-index: 6;
+        z-index: 1;
     }
 
     .grid-container {
